CMAKE_MINIMUM_REQUIRED ( VERSION 3.10 )

PROJECT( "integrator" CXX C )
SET(CUSTOM_RBDL_PATH "" CACHE PATH "Path to specific RBDL Installation")

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
)

SET(TARGETS    
  integrator
  CACHE STRING
  "Target to build"  
)

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLE} PROPERTIES
  LINKER_LANGUAGE CXX
)

FIND_PACKAGE (RBDL REQUIRED)
FIND_PACKAGE (Eigen3 3.0.0 )

SET(BOOST_INC_DIR
  /usr/include
  CACHE STRING
  "Location of the BOOST header files")


INCLUDE_DIRECTORIES ( 
  ${BOOST_INC_DIR} 
  ${RBDL_INCLUDE_DIR} 
  ${EIGEN3_INCLUDE_DIR}   
)

LIST(REMOVE_DUPLICATES TARGETS)

FOREACH (TARGET ${TARGETS})
  ADD_EXECUTABLE(${TARGET} 
    src/${TARGET}.cc 
    src/csvtools.h
    src/csvtools.cc
  )  

  TARGET_LINK_LIBRARIES ( 
    ${TARGET}
    ${RBDL_LIBRARY}
    ${RBDL_LUAMODEL_LIBRARY}
  )
ENDFOREACH ()
