CMAKE_MINIMUM_REQUIRED ( VERSION 3.10 )

PROJECT(my_integrator)

SET(CMAKE_CXX_STANDARD 11)

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
)


FIND_PACKAGE (RBDL REQUIRED)
FIND_PACKAGE (RBDL_LUAMODEL REQUIRED)
FIND_PACKAGE (Eigen3 REQUIRED)

SET(BOOST_INC_DIR
  /usr/include
  CACHE STRING
  "Location of the BOOST header files")

INCLUDE_DIRECTORIES ( 
  ${BOOST_INC_DIR} 
  ${rbdl_INCLUDE_DIR} 
  ${rbdl_luamodel_INCLUDE_DIR}
  ${EIGEN3_INCLUDE_DIR}   
)

ADD_EXECUTABLE(integrator integrator.cpp)  
TARGET_LINK_LIBRARIES (integrator ${rbdl_LIBRARY} ${rbdl_luamodel_LIBRARY})
